chore: Fix flow-server tests to work on Windows (#20884)
Close resources more eagerly and clean up the StreamHandlerFactory after use.